--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "concurrently": "^6.0.0",
     "eslint": "^7.21.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7"
   }
