added sourceType in eslint rc file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,16 +5,23 @@
         "es2021": true,
         "node": true
     },
+
     "extends": [
         "plugin:react/recommended",
         "google"
     ],
+
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
         "ecmaVersion": 12
     },
+
+    "sourceType": {
+        "module"
+    },
+
     "plugins": [
         "react"
     ],
