linter config test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,26 +5,39 @@
         "es2021": true,
         "node": true
     },
-
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
         "google"
     ],
-
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
         "ecmaVersion": 12
     },
-
-    "sourceType": {
-        "module"
-    },
-
     "plugins": [
         "react"
     ],
     "rules": {
-    }
+    },
+
+    "settings": {
+          "react": {
+              "createClass": "createReactClass",
+              "pragma": "React",
+              "fragment": "Fragment",
+              "version": "detect",
+              "flowVersion": "0.53"
+    },
+    "propWrapperFunctions": [
+        "forbidExtraProps",
+        {"property": "freeze", "obect": "Object"},
+        {"property": "myFavoriteWrapper"}
+    ],
+    "linkComponents": [
+      "Hyperlink",
+      {"name": "Link", "linkAttribute": "to"}
+    ]
+  }
 }
