--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,24 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react": {
+        "createClass": "createReactClass",
+             "pragma": "React",
+             "fragment": "Fragment",
+             "version": "detect",
+             "flowVersion": "0.53"
+           },
+           "propWrapperFunctions": [
+               "forbidExtraProps",
+               {"property": "freeze", "object": "Object"},
+               {"property": "myFavoriteWrapper"}
+           ],
+           "linkComponents": [
+             "Hyperlink",
+             {"name": "Link", "linkAttribute": "to"}
+           ]
     ],
+
     "rules": {
        "react/react-in-jsx-scope": "off",
        "require-jsdoc" : 0
