--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
         "node": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "google"
+        "eslint:recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -15,11 +14,8 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
     "rules": {
-       "react/react-in-jsx-scope": "off",
-       "require-jsdoc" : 0
+        "semi": ["error", "always"],
+        "quotes": ["error", "double"]
     }
 }
