--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
@@ -58,5 +59,6 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
