--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./",
+    "lint": "eslint --print-config server/app.js | eslint-config-prettier-check",
     "lint-fix": "eslint ./ --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "server": "nodemon server/app.js",
@@ -18,7 +18,6 @@
       "react-app",
       "react-app/jest"
     ]
-
   },
   "browserslist": {
     "production": [
@@ -50,16 +49,22 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "concurrently": "^6.0.0",
     "eslint": "^7.21.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.7",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
