added format script to CI, added eslint/prettier scripts to package.json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             - run: npm install
             - run: npm run test
             - run: npm run lint
+            - run: npm run format
 workflows:
     build-and-test:
       jobs:
