--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
+    "parser": "babel-eslint",
     "parserOptions": {
         "sourceType": "module",
         "ecmaVersion": 12
@@ -26,7 +27,8 @@
                 "semi": false,
                 "jsxSingleQuote": true,
                 "singleQuote": true,
-                "useTabs": true
+                "useTabs": true,
+                "endOfLine":"auto"
             }
         ],
         "react/react-in-jsx-scope": "off",
