--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "prettier/prettier": [
             "error",
             {
+                "endOfLine": "auto",
                 "printWidth": 80,
                 "trailingComma": "es5",
                 "semi": false,
