--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
                 "semi": false,
                 "jsxSingleQuote": true,
                 "singleQuote": true,
+                "doubleQuotes":true,
                 "useTabs": true,
                 "endOfLine":"auto"
             }
