--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
+    "supertest": "^6.1.3",
+    "validator": "^13.5.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
