--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm run test
-            - run: npm run lint --fix
+            - run: npm run lint
             - run: npm run format
 workflows:
     build-and-test:
