--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,2 @@
-# Allowlist 'test.js' in the '.build' folder
-# But do not allow anything else in the '.build' folder to be linted
-!.build
-.build/*
-!.build/test.js
+# Ignore built files except build/index.js
+build/*
