--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
     "client": "react-scripts start",
-    "test": "concurrently \"jest --forceExit\" \"react-scripts test --passWithNoTests\"",
+    "test": "concurrently \"env-cmd ./config/test.env jest --forceExit\" \"react-scripts test --passWithNoTests\"",
     "eject": "react-scripts eject",
     "server": "nodemon server/dev-app.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -19,6 +19,9 @@
     "format:prettier": "npm run prettier:base -- --write \"**/*.{js,ts,tsx,json,md,mdx}\"",
     "format:eslint": "npm run eslint:base -- --fix \"**/*.{js,ts,tsx,mdx}\"",
     "format": "npm run format:eslint && npm run format:prettier"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "eslintConfig": {
     "extends": [
@@ -63,7 +66,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
-    "supertest": "^6.1.3",
     "validator": "^13.5.2",
     "web-vitals": "^1.0.1"
   },
@@ -87,7 +89,8 @@
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "supertest": "^6.1.3"
   },
   "proxy": "http://localhost:3001"
 }
