--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "is-reachable": "^5.0.0",
     "mongodb": "^3.6.6",
