--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm run test
+            - run: 
+                name: npm run test
+                no_output_timeout: 30s
             - run: npm run lint
             - run: npm run format
 workflows:
