--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             - run: 
                 name: npm run test
                 no_output_timeout: 30s
+                command: npm run test
             - run: npm run lint
             - run: npm run format
 workflows:
