--- a/package.json
+++ b/package.json
@@ -1,96 +1,95 @@
 {
-  "name": "project-management",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "node server/app.js",
-    "build": "react-scripts build",
-    "heroku-postbuild": "npm run build",
-    "client": "react-scripts start",
-    "test": "concurrently \"env-cmd -f ./config/test.env jest --forceExit --watchAll\" \"react-scripts test --passWithNoTests\"",
-    "eject": "react-scripts eject",
-    "server": "env-cmd -f ./config/dev.env nodemon server/dev-app.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "prettier:base": "prettier --ignore-path .gitignore",
-    "eslint:base": "eslint --ignore-path .eslintignore",
-    "lint:eslint": "npm run eslint:base -- --max-warnings 0 \"**/*.{js,ts,tsx,mdx}\"",
-    "lint:eslint-config-prettier": "eslint --print-config .eslintrc | eslint-config-prettier-check",
-    "lint": "npm run lint:eslint",
-    "format:prettier": "npm run prettier:base -- --write \"**/*.{js,ts,tsx,json,md,mdx}\"",
-    "format:eslint": "npm run eslint:base -- --fix \"**/*.{js,ts,tsx,mdx}\"",
-    "format": "npm run format:eslint && npm run format:prettier"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@trendmicro/react-sidenav": "^0.5.0",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
-    "cors": "^2.8.5",
-    "env-cmd": "^10.1.0",
-    "express": "^4.17.1",
-    "is-reachable": "^5.0.0",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.11.18",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.1",
-    "react-dom": "^17.0.1",
-    "react-modal": "^3.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-spring": "^8.0.27",
-    "validator": "^13.5.2",
-    "web-vitals": "^1.0.1"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "concurrently": "^6.0.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-flowtype": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.5",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.10.1",
-    "jest": "^26.6.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
-    "supertest": "^6.1.3"
-  },
-  "proxy": "http://localhost:3001"
+	"name": "project-management",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"start": "node server/app.js",
+		"build": "react-scripts build",
+		"heroku-postbuild": "npm run build",
+		"client": "react-scripts start",
+		"test": "concurrently \"env-cmd -f ./config/test.env jest --detectOpenHandles --forceExit\" \"react-scripts test --passWithNoTests\"",
+		"eject": "react-scripts eject",
+		"server": "env-cmd -f ./config/dev.env nodemon server/dev-app.js",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"prettier:base": "prettier --ignore-path .gitignore",
+		"eslint:base": "eslint --ignore-path .eslintignore",
+		"lint:eslint": "npm run eslint:base -- --max-warnings 0 \"**/*.{js,ts,tsx,mdx}\"",
+		"lint:eslint-config-prettier": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+		"lint": "npm run lint:eslint",
+		"format:prettier": "npm run prettier:base -- --write \"**/*.{js,ts,tsx,json,md,mdx}\"",
+		"format:eslint": "npm run eslint:base -- --fix \"**/*.{js,ts,tsx,mdx}\"",
+		"format": "npm run format:eslint && npm run format:prettier"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.34",
+		"@fortawesome/free-brands-svg-icons": "^5.15.2",
+		"@fortawesome/free-regular-svg-icons": "^5.15.2",
+		"@fortawesome/free-solid-svg-icons": "^5.15.2",
+		"@fortawesome/react-fontawesome": "^0.1.14",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"@trendmicro/react-sidenav": "^0.5.0",
+		"axios": "^0.21.1",
+		"bcrypt": "^5.0.1",
+		"body-parser": "^1.19.0",
+		"bootstrap": "^4.6.0",
+		"cors": "^2.8.5",
+		"env-cmd": "^10.1.0",
+		"express": "^4.17.1",
+		"is-reachable": "^5.0.0",
+		"mongodb": "^3.6.6",
+		"mongoose": "^5.11.18",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-bootstrap": "^1.5.1",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"react-spring": "^8.0.27",
+		"validator": "^13.5.2",
+		"web-vitals": "^1.0.1"
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.1.0",
+		"concurrently": "^6.0.0",
+		"eslint": "^7.21.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-config-react-app": "^6.0.0",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-flowtype": "^5.3.1",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.5",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-plugin-testing-library": "^3.10.1",
+		"jest": "^26.6.0",
+		"nodemon": "^2.0.7",
+		"prettier": "^2.2.1",
+		"react-test-renderer": "^17.0.1",
+		"supertest": "^6.1.3"
+	},
+	"proxy": "http://localhost:3001"
 }
