--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-bootstrap": "^1.5.1",
+		"react-datepicker": "^3.8.0",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
