Search bar now takes results from db

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
                 "jsxSingleQuote": true,
                 "singleQuote": true,
                 "doubleQuotes":true,
+                "backtick":true,
                 "useTabs": true,
                 "endOfLine":"auto"
             }
