--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "react-scripts build",
 		"heroku-postbuild": "npm run build",
 		"client": "react-scripts start",
-		"test": "concurrently \"env-cmd -f ./config/test.env jest --detectOpenHandles --forceExit\" \"react-scripts test --passWithNoTests\"",
+		"test2":"concurrently \"node server/app.js\" \"env-cmd -f ./config/test.env jest --detectOpenHandles --forceExit\"",
+		"test": "concurrently \"npm run test2\" \"react-scripts test --passWithNoTests\"",
 		"eject": "react-scripts eject",
 		"server": "env-cmd -f ./config/dev.env nodemon server/dev-app.js",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
