--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"env-cmd": "^10.1.0",
 		"express": "^4.17.1",
 		"is-reachable": "^5.0.0",
+		"leaflet": "^1.7.1",
 		"mongodb": "^3.6.6",
 		"mongodb-client-encryption": "^1.2.3",
 		"mongoose": "^5.11.18",
@@ -64,6 +65,7 @@
 		"react-bootstrap": "^1.5.1",
 		"react-datepicker": "^3.8.0",
 		"react-dom": "^17.0.1",
+		"react-leaflet": "^3.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-spring": "^8.0.27",
