--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"react-bootstrap": "^1.5.1",
 		"react-datepicker": "^3.8.0",
 		"react-dom": "^17.0.1",
+		"react-geocode": "^0.2.3",
 		"react-leaflet": "^3.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
