--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"express": "^4.17.1",
 		"is-reachable": "^5.0.0",
 		"leaflet": "^1.7.1",
+		"leaflet-geosearch": "^3.3.2",
 		"mongodb": "^3.6.6",
 		"mongodb-client-encryption": "^1.2.3",
 		"mongoose": "^5.11.18",
@@ -65,7 +66,6 @@
 		"react-bootstrap": "^1.5.1",
 		"react-datepicker": "^3.8.0",
 		"react-dom": "^17.0.1",
-		"react-geocode": "^0.2.3",
 		"react-leaflet": "^3.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
