--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"react-datepicker": "^3.8.0",
 		"react-dom": "^17.0.1",
 		"react-leaflet": "^3.1.0",
+		"react-leaflet-geosearch": "^0.3.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-spring": "^8.0.27",
