--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@testing-library/user-event": "^12.1.10",
 		"@trendmicro/react-sidenav": "^0.5.0",
 		"axios": "^0.21.1",
+		"axios-extensions": "^3.1.3",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.0",
 		"bootstrap": "^4.6.0",
@@ -79,7 +80,7 @@
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
 		"concurrently": "^6.0.0",
-		"eslint": "^7.21.0",
+		"eslint": "^7.27.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-config-react-app": "^6.0.0",
 		"eslint-config-standard": "^16.0.2",
